run_log.txt
[WRAPPER] Unhandled exception inside goliath/main.py (workflow will stay green):
Traceback (most recent call last):
  File "/home/runner/work/goliath-auto-tool/goliath-auto-tool/main.py", line 17, in _run_goliath_main
    runpy.run_path(target, run_name="__main__")
  File "/opt/hostedtoolcache/Python/3.10.19/x64/lib/python3.10/runpy.py", line 288, in run_path
    code, fname = _get_code_from_file(run_name, path_name)
  File "/opt/hostedtoolcache/Python/3.10.19/x64/lib/python3.10/runpy.py", line 257, in _get_code_from_file
    code = compile(f.read(), fname, 'exec')
  File "goliath/main.py", line 1868
    html_doc = f"""<!doctype html>
               ^
SyntaxError: unterminated triple-quoted string literal (detected at line 2062)
REAL_EXITCODE=0
